# robotic_arm_ws

src/robotic_arm/: package.xml  setup.cfg  setup.py
src/robotic_arm/launch/: display.launch.py
src/robotic_arm/mesh/: 1.dae  2.dae  3.dae  4.dae  4_.dae
src/robotic_arm/urdf/: robotic_arm.urdf
