[develop]
script_dir=$base/lib/robotic_arm
[install]
install_scripts=$base/lib/robotic_arm

[options.data_files]
share/ament_index/resource_index/packages = resource/robotic_arm
share/robotic_arm/launch = launch/*
share/robotic_arm/urdf = urdf/*
share/robotic_arm/mesh = mesh/*
share/robotic_arm/config = config/*

